# svelte-bazel-example

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Jenkinsfile  LICENSE  README.md  WORKSPACE  package.json  test.js  tsconfig.json
src/backend/: BUILD.bazel  server.ts
src/client/: App.html  App.svelte  BUILD.bazel  app.scss  index.html  main.js
src/client/grid/: Grid.svelte
src/client/treeview/: BUILD.bazel  Treeview.svelte
src/frontend/: App.html  BUILD.bazel  bs-config-prod.js  index-prod.html
src/frontend/friends/: friends-service.js
src/frontend/grid/: BUILD.bazel  Grid.html
src/frontend/teams/team0/: BUILD.bazel  Team.html
src/frontend/teams/team0/module0/: BUILD.bazel
src/frontend/teams/team0/module1/: BUILD.bazel
src/frontend/teams/team0/module10/: BUILD.bazel
src/frontend/teams/team0/module11/: BUILD.bazel
src/frontend/teams/team0/module12/: BUILD.bazel
src/frontend/teams/team0/module13/: BUILD.bazel
src/frontend/teams/team0/module14/: BUILD.bazel
src/frontend/teams/team0/module15/: BUILD.bazel
src/frontend/teams/team0/module16/: BUILD.bazel
src/frontend/teams/team0/module17/: BUILD.bazel
src/frontend/teams/team0/module18/: BUILD.bazel
src/frontend/teams/team0/module19/: BUILD.bazel
src/frontend/teams/team0/module2/: BUILD.bazel
src/frontend/teams/team0/module3/: BUILD.bazel
src/frontend/teams/team0/module4/: BUILD.bazel
src/frontend/teams/team0/module5/: BUILD.bazel
src/frontend/teams/team0/module6/: BUILD.bazel
src/frontend/teams/team0/module7/: BUILD.bazel
src/frontend/teams/team0/module8/: BUILD.bazel
src/frontend/teams/team0/module9/: BUILD.bazel
src/frontend/teams/team1/: BUILD.bazel  Team.html
src/frontend/teams/team1/module0/: BUILD.bazel
src/frontend/teams/team1/module1/: BUILD.bazel
src/frontend/teams/team1/module10/: BUILD.bazel
src/frontend/teams/team1/module11/: BUILD.bazel
src/frontend/teams/team1/module12/: BUILD.bazel
src/frontend/teams/team1/module13/: BUILD.bazel
src/frontend/teams/team1/module14/: BUILD.bazel
src/frontend/teams/team1/module15/: BUILD.bazel
src/frontend/teams/team1/module16/: BUILD.bazel
src/frontend/teams/team1/module17/: BUILD.bazel
src/frontend/teams/team1/module18/: BUILD.bazel
src/frontend/teams/team1/module19/: BUILD.bazel
src/frontend/teams/team1/module2/: BUILD.bazel
src/frontend/teams/team1/module3/: BUILD.bazel
src/frontend/teams/team1/module4/: BUILD.bazel
src/frontend/teams/team1/module5/: BUILD.bazel
src/frontend/teams/team1/module6/: BUILD.bazel
src/frontend/teams/team1/module7/: BUILD.bazel
src/frontend/teams/team1/module8/: BUILD.bazel
src/frontend/teams/team1/module9/: BUILD.bazel
src/frontend/teams/team2/: BUILD.bazel  Team.html
src/frontend/teams/team2/module0/: BUILD.bazel
src/frontend/teams/team2/module1/: BUILD.bazel
src/frontend/teams/team2/module10/: BUILD.bazel
src/frontend/teams/team2/module11/: BUILD.bazel
src/frontend/teams/team2/module12/: BUILD.bazel
src/frontend/teams/team2/module13/: BUILD.bazel
src/frontend/teams/team2/module14/: BUILD.bazel
src/frontend/teams/team2/module15/: BUILD.bazel
src/frontend/teams/team2/module16/: BUILD.bazel
src/frontend/teams/team2/module17/: BUILD.bazel
src/frontend/teams/team2/module18/: BUILD.bazel
src/frontend/teams/team2/module19/: BUILD.bazel
src/frontend/teams/team2/module2/: BUILD.bazel
src/frontend/teams/team2/module3/: BUILD.bazel
src/frontend/teams/team2/module4/: BUILD.bazel
src/frontend/teams/team2/module5/: BUILD.bazel
src/frontend/teams/team2/module6/: BUILD.bazel
src/frontend/teams/team2/module7/: BUILD.bazel
src/frontend/teams/team2/module8/: BUILD.bazel
src/frontend/teams/team2/module9/: BUILD.bazel
src/frontend/teams/team3/: BUILD.bazel  Team.html
src/frontend/teams/team3/module0/: BUILD.bazel
src/frontend/teams/team3/module1/: BUILD.bazel
src/frontend/teams/team3/module10/: BUILD.bazel
src/frontend/teams/team3/module11/: BUILD.bazel
src/frontend/teams/team3/module12/: BUILD.bazel
src/frontend/teams/team3/module13/: BUILD.bazel
src/frontend/teams/team3/module14/: BUILD.bazel
src/frontend/teams/team3/module15/: BUILD.bazel
src/frontend/teams/team3/module16/: BUILD.bazel
src/frontend/teams/team3/module17/: BUILD.bazel
src/frontend/teams/team3/module18/: BUILD.bazel
src/frontend/teams/team3/module19/: BUILD.bazel
src/frontend/teams/team3/module2/: BUILD.bazel
src/frontend/teams/team3/module3/: BUILD.bazel
src/frontend/teams/team3/module4/: BUILD.bazel
src/frontend/teams/team3/module5/: BUILD.bazel
src/frontend/teams/team3/module6/: BUILD.bazel  Mod.html
src/frontend/teams/team3/module7/: BUILD.bazel
src/frontend/teams/team3/module8/: BUILD.bazel
src/frontend/teams/team3/module9/: BUILD.bazel
src/frontend/teams/team4/: BUILD.bazel  Team.html
src/frontend/teams/team4/module0/: BUILD.bazel
src/frontend/teams/team4/module1/: BUILD.bazel
src/frontend/teams/team4/module10/: BUILD.bazel
src/frontend/teams/team4/module11/: BUILD.bazel
src/frontend/teams/team4/module12/: BUILD.bazel
src/frontend/teams/team4/module13/: BUILD.bazel
src/frontend/teams/team4/module14/: BUILD.bazel
src/frontend/teams/team4/module15/: BUILD.bazel
src/frontend/teams/team4/module16/: BUILD.bazel
src/frontend/teams/team4/module17/: BUILD.bazel
src/frontend/teams/team4/module18/: BUILD.bazel
src/frontend/teams/team4/module19/: BUILD.bazel
src/frontend/teams/team4/module2/: BUILD.bazel
src/frontend/teams/team4/module3/: BUILD.bazel
src/frontend/teams/team4/module4/: BUILD.bazel
src/frontend/teams/team4/module5/: BUILD.bazel
src/frontend/teams/team4/module6/: BUILD.bazel
src/frontend/teams/team4/module7/: BUILD.bazel
src/frontend/teams/team4/module8/: BUILD.bazel
src/frontend/teams/team5/: BUILD.bazel  Team.html
src/frontend/teams/team6/: BUILD.bazel  Team.html
src/frontend/teams/team7/: BUILD.bazel  Team.html
src/frontend/teams/team8/: BUILD.bazel  Team.html
src/frontend/teams/team9/: BUILD.bazel  Team.html
src/server/: BUILD.bazel  index.html  server.ts
(+126 files in other folders)
