load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
  name = "ts_server",
  srcs = glob(["*.ts"]),
  tsconfig = "//:tsconfig.json",
  deps = ["@npm//express"]
)

nodejs_binary(
  name = "api", 
  data = [
    ":ts_server",
    "@npm//express"
  ],
  entry_point = "../server.js",
) 