package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

svelte(
  name = "app",
  entry_point = "App.html",
  srcs = ["main.js"],
  deps = [
    "//src/client/treeview", 
    "//src/client/grid"
  ]
)

sass_binary(
  name = "styles",
  src = "app.scss",
  deps = [
    "//src/client/styles"
  ]
)

bundle_prod(
  name = "bundle_prod",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

bundle_dev(
  name = "bundle_dev",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

nodejs_binary(
  name = "dev_server",
  entry_point = "lite-server/bin/lite-server",
  templated_args = ["--baseDir=src/client"],
  tags = ["ibazel_notify_changes"],
  data = [
      "index.html",
      ":bundle_dev",
      "@npm//lite-server",
  ],
)

