package(default_visibility = ["//visibility:public"])

load("//svelte:svelte.bzl", "svelte")
load("//svelte:bundle-dev.bzl", "bundle_dev")
load("//svelte:bundle-prod.bzl", "bundle_prod")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

svelte(
  name = "app",
  srcs = ["main.js"],
  entry_point = "App.html",
  deps = ["//src/frontend/treeview", 
          "//src/frontend/grid",
          "//src/frontend/friends"
  ]
)

sass_binary(
  name = "styles",
  src = "app.scss",
  deps = [
    "//src/frontend/styles"
  ]
)

bundle_dev(
  name = "bundle_dev",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

bundle_prod(
  name = "bundle_prod",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "history_server")

history_server(
  name = "server",
  data = [
      "index.html",
      ":bundle_prod"
  ],
)