package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

svelte(
  name = "app",
  entry_point = "App.html",
  srcs = ["main.js"],
  deps = ["//src/frontend/treeview", 
          "//src/frontend/grid",
          "//src/frontend/friends",
  ]
)

sass_binary(
  name = "styles",
  src = "app.scss",
  deps = [
    "//src/frontend/styles"
  ]
)

bundle_prod(
  name = "bundle_prod",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

bundle_dev(
  name = "bundle_dev",
  entry_point = "main.js",
  deps = [
    ":app",
    ":styles"
  ],
)

nodejs_binary(
  name = "dev_server",
  entry_point = "lite-server/bin/lite-server",
  templated_args = ["--baseDir=src/frontend"],
  tags = ["ibazel_notify_changes"],
  data = [
      "index.html",
      ":bundle_dev",
      "@npm//lite-server",
  ],
)

nodejs_binary(
  name = "prod_server",
  entry_point = "lite-server/bin/lite-server",
  templated_args = ["--baseDir=src/frontend", "--config=src/frontend/bs-config-prod.js"],
  tags = ["ibazel_notify_changes"],
  data = [
      "index-prod.html",
      ":bundle_prod",
      "@npm//lite-server",
      "@npm//compression",
      "bs-config-prod.js"
  ],
)