package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "Team.html",
  deps = [
    "//src/frontend/teams/team0/module0:mod",
    "//src/frontend/teams/team0/module1:mod",
    "//src/frontend/teams/team0/module2:mod",
    "//src/frontend/teams/team0/module3:mod",
    "//src/frontend/teams/team0/module4:mod",
    "//src/frontend/teams/team0/module5:mod",
    "//src/frontend/teams/team0/module6:mod",
    "//src/frontend/teams/team0/module7:mod",
    "//src/frontend/teams/team0/module8:mod",
    "//src/frontend/teams/team0/module9:mod",
    "//src/frontend/teams/team0/module10:mod",
    "//src/frontend/teams/team0/module11:mod",
    "//src/frontend/teams/team0/module12:mod",
    "//src/frontend/teams/team0/module13:mod",
    "//src/frontend/teams/team0/module14:mod",
    "//src/frontend/teams/team0/module15:mod",
    "//src/frontend/teams/team0/module16:mod",
    "//src/frontend/teams/team0/module17:mod",
    "//src/frontend/teams/team0/module18:mod",
    "//src/frontend/teams/team0/module19:mod",
  ]
)