package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "Team.html",
  deps = [
    "//src/frontend/teams/team1/module0:mod",
    "//src/frontend/teams/team1/module1:mod",
    "//src/frontend/teams/team1/module2:mod",
    "//src/frontend/teams/team1/module3:mod",
    "//src/frontend/teams/team1/module4:mod",
    "//src/frontend/teams/team1/module5:mod",
    "//src/frontend/teams/team1/module6:mod",
    "//src/frontend/teams/team1/module7:mod",
    "//src/frontend/teams/team1/module8:mod",
    "//src/frontend/teams/team1/module9:mod",
    "//src/frontend/teams/team1/module10:mod",
    "//src/frontend/teams/team1/module11:mod",
    "//src/frontend/teams/team1/module12:mod",
    "//src/frontend/teams/team1/module13:mod",
    "//src/frontend/teams/team1/module14:mod",
    "//src/frontend/teams/team1/module15:mod",
    "//src/frontend/teams/team1/module16:mod",
    "//src/frontend/teams/team1/module17:mod",
    "//src/frontend/teams/team1/module18:mod",
    "//src/frontend/teams/team1/module19:mod",
  ]
)