package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "Team.html",
  deps = [
    "//src/frontend/teams/team2/module0:mod",
    "//src/frontend/teams/team2/module1:mod",
    "//src/frontend/teams/team2/module2:mod",
    "//src/frontend/teams/team2/module3:mod",
    "//src/frontend/teams/team2/module4:mod",
    "//src/frontend/teams/team2/module5:mod",
    "//src/frontend/teams/team2/module6:mod",
    "//src/frontend/teams/team2/module7:mod",
    "//src/frontend/teams/team2/module8:mod",
    "//src/frontend/teams/team2/module9:mod",
    "//src/frontend/teams/team2/module10:mod",
    "//src/frontend/teams/team2/module11:mod",
    "//src/frontend/teams/team2/module12:mod",
    "//src/frontend/teams/team2/module13:mod",
    "//src/frontend/teams/team2/module14:mod",
    "//src/frontend/teams/team2/module15:mod",
    "//src/frontend/teams/team2/module16:mod",
    "//src/frontend/teams/team2/module17:mod",
    "//src/frontend/teams/team2/module18:mod",
    "//src/frontend/teams/team2/module19:mod",
  ]
)