package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "Team.html",
  deps = [
    "//src/frontend/teams/team4/module0:mod",
    "//src/frontend/teams/team4/module1:mod",
    "//src/frontend/teams/team4/module2:mod",
    "//src/frontend/teams/team4/module3:mod",
    "//src/frontend/teams/team4/module4:mod",
    "//src/frontend/teams/team4/module5:mod",
    "//src/frontend/teams/team4/module6:mod",
    "//src/frontend/teams/team4/module7:mod",
    "//src/frontend/teams/team4/module8:mod",
    "//src/frontend/teams/team4/module9:mod",
    "//src/frontend/teams/team4/module10:mod",
    "//src/frontend/teams/team4/module11:mod",
    "//src/frontend/teams/team4/module12:mod",
    "//src/frontend/teams/team4/module13:mod",
    "//src/frontend/teams/team4/module14:mod",
    "//src/frontend/teams/team4/module15:mod",
    "//src/frontend/teams/team4/module16:mod",
    "//src/frontend/teams/team4/module17:mod",
    "//src/frontend/teams/team4/module18:mod",
    "//src/frontend/teams/team4/module19:mod",
  ]
)