package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "Team.html",
  deps = [
    "//src/frontend/teams/team6/module0:mod",
    "//src/frontend/teams/team6/module1:mod",
    "//src/frontend/teams/team6/module2:mod",
    "//src/frontend/teams/team6/module3:mod",
    "//src/frontend/teams/team6/module4:mod",
    "//src/frontend/teams/team6/module5:mod",
    "//src/frontend/teams/team6/module6:mod",
    "//src/frontend/teams/team6/module7:mod",
    "//src/frontend/teams/team6/module8:mod",
    "//src/frontend/teams/team6/module9:mod",
    "//src/frontend/teams/team6/module10:mod",
    "//src/frontend/teams/team6/module11:mod",
    "//src/frontend/teams/team6/module12:mod",
    "//src/frontend/teams/team6/module13:mod",
    "//src/frontend/teams/team6/module14:mod",
    "//src/frontend/teams/team6/module15:mod",
    "//src/frontend/teams/team6/module16:mod",
    "//src/frontend/teams/team6/module17:mod",
    "//src/frontend/teams/team6/module18:mod",
    "//src/frontend/teams/team6/module19:mod",
  ]
)