package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "team.html",
  deps = [
    "//src/frontend/teams/team7/module0:mod",
    "//src/frontend/teams/team7/module1:mod",
    "//src/frontend/teams/team7/module2:mod",
    "//src/frontend/teams/team7/module3:mod",
    "//src/frontend/teams/team7/module4:mod",
    "//src/frontend/teams/team7/module5:mod",
    "//src/frontend/teams/team7/module6:mod",
    "//src/frontend/teams/team7/module7:mod",
    "//src/frontend/teams/team7/module8:mod",
    "//src/frontend/teams/team7/module9:mod",
    "//src/frontend/teams/team7/module10:mod",
    "//src/frontend/teams/team7/module11:mod",
    "//src/frontend/teams/team7/module12:mod",
    "//src/frontend/teams/team7/module13:mod",
    "//src/frontend/teams/team7/module14:mod",
    "//src/frontend/teams/team7/module15:mod",
    "//src/frontend/teams/team7/module16:mod",
    "//src/frontend/teams/team7/module17:mod",
    "//src/frontend/teams/team7/module18:mod",
    "//src/frontend/teams/team7/module19:mod",
  ]
)