package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "team.html",
  deps = [
    "//src/frontend/teams/team8/module0:mod",
    "//src/frontend/teams/team8/module1:mod",
    "//src/frontend/teams/team8/module2:mod",
    "//src/frontend/teams/team8/module3:mod",
    "//src/frontend/teams/team8/module4:mod",
    "//src/frontend/teams/team8/module5:mod",
    "//src/frontend/teams/team8/module6:mod",
    "//src/frontend/teams/team8/module7:mod",
    "//src/frontend/teams/team8/module8:mod",
    "//src/frontend/teams/team8/module9:mod",
    "//src/frontend/teams/team8/module10:mod",
    "//src/frontend/teams/team8/module11:mod",
    "//src/frontend/teams/team8/module12:mod",
    "//src/frontend/teams/team8/module13:mod",
    "//src/frontend/teams/team8/module14:mod",
    "//src/frontend/teams/team8/module15:mod",
    "//src/frontend/teams/team8/module16:mod",
    "//src/frontend/teams/team8/module17:mod",
    "//src/frontend/teams/team8/module18:mod",
    "//src/frontend/teams/team8/module19:mod",
  ]
)