package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "team",
  entry_point = "team.html",
  deps = [
    "//src/frontend/teams/team9/module0:mod",
    "//src/frontend/teams/team9/module1:mod",
    "//src/frontend/teams/team9/module2:mod",
    "//src/frontend/teams/team9/module3:mod",
    "//src/frontend/teams/team9/module4:mod",
    "//src/frontend/teams/team9/module5:mod",
    "//src/frontend/teams/team9/module6:mod",
    "//src/frontend/teams/team9/module7:mod",
    "//src/frontend/teams/team9/module8:mod",
    "//src/frontend/teams/team9/module9:mod",
    "//src/frontend/teams/team9/module10:mod",
    "//src/frontend/teams/team9/module11:mod",
    "//src/frontend/teams/team9/module12:mod",
    "//src/frontend/teams/team9/module13:mod",
    "//src/frontend/teams/team9/module14:mod",
    "//src/frontend/teams/team9/module15:mod",
    "//src/frontend/teams/team9/module16:mod",
    "//src/frontend/teams/team9/module17:mod",
    "//src/frontend/teams/team9/module18:mod",
    "//src/frontend/teams/team9/module19:mod",
  ]
)