package(default_visibility = ["//visibility:public"])
load("//svelte:svelte.bzl", "svelte")

svelte(
  name = "mod",
  entry_point = "Mod.html",
  deps = [
    "//src/frontend/teams/team7/module3/cmp0:cmp0",
    "//src/frontend/teams/team7/module3/cmp1:cmp1",
    "//src/frontend/teams/team7/module3/cmp2:cmp2",
    "//src/frontend/teams/team7/module3/cmp3:cmp3",
    "//src/frontend/teams/team7/module3/cmp4:cmp4",
    "//src/frontend/teams/team7/module3/cmp5:cmp5",
    "//src/frontend/teams/team7/module3/cmp6:cmp6",
    "//src/frontend/teams/team7/module3/cmp7:cmp7",
    "//src/frontend/teams/team7/module3/cmp8:cmp8",
    "//src/frontend/teams/team7/module3/cmp9:cmp9"
  ]
)